changed accordion to open first item on load

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</div>
 				</div>
 				<a href="#">
-					<div class="flights-deal hide">
+					<div class="flights-deal show">
 						<div class="dealimage">
 							<img src="http://www.cfmedia.vfmleonardo.com/imageRepo/3/0/46/581/587/1099066cdmsPHGphoto_img_pho_000_nc__2775174_River-Rock-So_I.jpg" width="90">
 						</div>
@@ -49,7 +49,7 @@
 					</div>
 				</a>				
 				<a href="#">
-					<div class="flights-deal hide">
+					<div class="flights-deal show">
 						<div class="dealimage">
 							<img src="http://www.cfmedia.vfmleonardo.com/imageRepo/4/0/56/823/399/HNLKADT_Pool_Deck_I.jpg" width="90">
 						</div>
